# relational-deep-learning-with-pg19

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: gotchas.md
pg_rdl/: __init__.py  build_graph.py  extract.py  features.py  load.py  model.py  train.py
sql/: property_graph.sql  smoke_test.sql
